--- a/oneplate_project/requirements.txt
+++ b/oneplate_project/requirements.txt
@@ -1,6 +1,9 @@
 # python == 3.11
 django == 4.2.16
+drf_yasg == 1.21.5
 mysqlclient==2.1.1
 djangorestframework==3.14.0
 python-decouple==3.8
 django-allauth == 0.57.0
+Pillow == 10.0.1
+drf-extra-fields == 3.7.0
